low loss, but bad predictions

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,12 +13,15 @@
     "import helper\n",
     "import warnings\n",
     "from distutils.version import LooseVersion\n",
-    "import project_tests as tests"
+    "import project_tests as tests\n",
+    "import scipy\n",
+    "import numpy as np\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,29 +128,35 @@
     "    \"\"\"\n",
     "    # TODO: Implement function\n",
     "    \n",
-    "    # 1x1 convs\n",
-    "    output = tf.layers.conv2d(vgg_layer7_out, num_classes, 1, strides=(1,1),\n",
-    "                             kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3))\n",
-    "    \n",
-    "    # transpose conv\n",
-    "    output = tf.layers.conv2d_transpose(output, 512, 4, strides=(2, 2), padding='same',\n",
-    "                                       kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3))\n",
-    "    # skip layer\n",
-    "    output = tf.add(output, vgg_layer4_out)\n",
-    "    # transpose conv\n",
-    "    output = tf.layers.conv2d_transpose(output, 256, 4, strides=(2, 2), padding='same')\n",
-    "    # skip layer\n",
-    "    output = tf.add(output, vgg_layer3_out)\n",
-    "    # transpose conv\n",
-    "    output = tf.layers.conv2d_transpose(output, num_classes, 16, strides=(8, 8), padding='same')\n",
-    "    \n",
+    "    conv_layer7 = tf.layers.conv2d(vgg_layer7_out, num_classes, 1, padding='same',\n",
+    "                                     kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                  kernel_initializer=tf.truncated_normal_initializer(stddev=0.01))\n",
+    "    conv_layer4 = tf.layers.conv2d(vgg_layer4_out, num_classes, 1, padding='same',\n",
+    "                                     kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                  kernel_initializer=tf.truncated_normal_initializer(stddev=0.01))\n",
+    "    output = tf.layers.conv2d_transpose(conv_layer7, num_classes, 4, 2, 'same',\n",
+    "                                        kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                       kernel_initializer=tf.truncated_normal_initializer(stddev=0.01))\n",
+    "    output = tf.add(output, conv_layer4)  \n",
+    "    conv_layer3 = tf.layers.conv2d(vgg_layer3_out, num_classes, 1, padding='same',\n",
+    "                                     kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                  kernel_initializer=tf.truncated_normal_initializer(stddev=0.01))\n",
+    "    output = tf.layers.conv2d_transpose(output, num_classes, 4, 2, 'same',\n",
+    "                                        kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                       kernel_initializer=tf.truncated_normal_initializer(stddev=0.01)) \n",
+    "    output = tf.add(output, conv_layer3)  \n",
+    "\n",
+    "    output = tf.layers.conv2d_transpose(output, num_classes, 16, 8, 'same',\n",
+    "                                        kernel_regularizer=tf.contrib.layers.l2_regularizer(1e-3),\n",
+    "                                       kernel_initializer=tf.truncated_normal_initializer(stddev=0.01))  \n",
+    "\n",
     "    return output\n",
     "tests.test_layers(layers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,14 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n"
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n",
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n",
+      "INFO:tensorflow:Restoring parameters from ./segmentation_model\n",
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n",
+      "INFO:tensorflow:Restoring parameters from ./segmentation_model\n",
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n",
+      "INFO:tensorflow:Restoring parameters from ./segmentation_model\n"
      ]
     }
    ],
@@ -212,7 +227,7 @@
     "    \n",
     "    for epoch in range(epochs):\n",
     "        for i, (img, label) in enumerate(get_batches_fn(batch_size)):\n",
-    "            f_dict = {input_image: img, correct_label: label, keep_prob: 0.5, learning_rate: 0.001}\n",
+    "            f_dict = {input_image: img, correct_label: label, keep_prob: 0.5, learning_rate: 1e-4}\n",
     "            _, loss = sess.run([train_op, cross_entropy_loss], feed_dict=f_dict)\n",
     "            print('Loss for batch {0} of iteration {1}: {2}'.format(i, epoch, loss))\n",
     "\n",
@@ -221,11 +236,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "def load_single_image_from_path(image_path, image_shape=(160, 576)):\n",
+    "    images = []\n",
+    "    image = scipy.misc.imresize(scipy.misc.imread(image_path), image_shape)\n",
+    "    images.append(image)\n",
+    "    return images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_image(image, sess, logits, keep_prob, input_image):\n",
+    "    \n",
+    "    image_shape = (160, 576)\n",
+    "    image = scipy.misc.imresize(image, image_shape)\n",
+    "    \n",
+    "    im_softmax = sess.run(\n",
+    "            [tf.nn.softmax(logits)],\n",
+    "            {keep_prob: 1.0, input_image: [image]})\n",
+    "        \n",
+    "\n",
+    "    label_index = np.argmax(im_softmax, axis=2)\n",
+    "\n",
+    "    value_fill_1 = label_index.copy()\n",
+    "    value_fill_1.fill(1)\n",
+    "    value_fill_2 = label_index.copy()\n",
+    "    value_fill_2.fill(2)\n",
+    "    value_fill_3 = label_index.copy()\n",
+    "    value_fill_3.fill(3)\n",
+    "\n",
+    "    segmentation1 = np.equal(label_index, value_fill_1)\n",
+    "    segmentation2 = np.equal(label_index, value_fill_2)\n",
+    "    segmentation3 = np.equal(label_index, value_fill_3)\n",
+    "    \n",
+    "    segmentation1 = segmentation1.reshape(image_shape[0], image_shape[1], 1)\n",
+    "    segmentation2 = segmentation2.reshape(image_shape[0], image_shape[1], 1)\n",
+    "    segmentation3 = segmentation3.reshape(image_shape[0], image_shape[1], 1)\n",
+    "    mask1 = np.dot(segmentation1, np.array([[0, 255, 0, 127]]))\n",
+    "    mask1 = scipy.misc.toimage(mask1, mode=\"RGBA\")\n",
+    "    mask2 = np.dot(segmentation2, np.array([[0, 0, 255, 127]]))\n",
+    "    mask2 = scipy.misc.toimage(mask2, mode=\"RGBA\")\n",
+    "    mask3 = np.dot(segmentation3, np.array([[255, 242, 0, 127]]))\n",
+    "    mask3 = scipy.misc.toimage(mask3, mode=\"RGBA\")\n",
+    "    street_im = scipy.misc.toimage(image)\n",
+    "    street_im.paste(mask1, box=None, mask=mask1)\n",
+    "    street_im.paste(mask2, box=None, mask=mask2)\n",
+    "    street_im.paste(mask3, box=None, mask=mask3)\n",
+    "    \n",
+    "    return np.array(street_im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Image' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-bd5cb0ee70c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m     \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-bd5cb0ee70c2>\u001b[0m in \u001b[0;36mrun\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0msaver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrestore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             scipy.misc.imshow(process_image(preproc(scipy.misc.imread(\"./data/data_road/training/image_2/um_000001.png\")),\n\u001b[0;32m---> 63\u001b[0;31m                                            sess, logits, vgg_keep_prob, vgg_input))\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;31m#             image = load_single_image_from_path()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-14-1c9e11b0fc8d>\u001b[0m in \u001b[0;36mprocess_image\u001b[0;34m(image, sess, logits, keep_prob, input_image)\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mmask3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msegmentation3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m242\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m127\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mmask3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoimage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmask3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"RGBA\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mstreet_im\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoimage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0mstreet_im\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaste\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmask1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbox\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mstreet_im\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaste\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmask2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbox\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmask2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-14-1c9e11b0fc8d>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mimage_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m160\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m576\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mdeproc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrn_mean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Image' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
     "def run():\n",
+    "    re_train = False\n",
+    "    predict_image = True\n",
+    "    \n",
+    "    tf.reset_default_graph()\n",
     "    num_classes = 2\n",
     "    image_shape = (160, 576)\n",
     "    data_dir = './data'\n",
@@ -250,8 +347,8 @@
     "        \n",
     "        # hyper parameters\n",
     "        \n",
-    "        epochs = 3\n",
-    "        batch_size = 32\n",
+    "        epochs = 30\n",
+    "        batch_size = 8\n",
     "        \n",
     "        # place holders\n",
     "        \n",
@@ -265,13 +362,30 @@
     "\n",
     "        # TODO: Train NN using the train_nn function\n",
     "        \n",
-    "        saver = tf.train.Saver()\n",
     "        sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "        if re_train:\n",
     "        \n",
-    "        train_nn(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, vgg_input, correct_label,\n",
-    "                vgg_keep_prob, learning_rate)\n",
-    "        \n",
-    "        saver.save(sess, 'segmentation_model')\n",
+    "            saver = tf.train.Saver()\n",
+    "            train_nn(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, vgg_input, correct_label,\n",
+    "                    vgg_keep_prob, learning_rate)\n",
+    "\n",
+    "            saver.save(sess, 'segmentation_model')\n",
+    "            \n",
+    "        if predict_image:\n",
+    "            \n",
+    "            saver = tf.train.import_meta_graph('segmentation_model.meta')\n",
+    "            saver.restore(sess,tf.train.latest_checkpoint('./'))\n",
+    "            scipy.misc.imshow(process_image(preproc(scipy.misc.imread(\"./data/data_road/training/image_2/um_000001.png\")),\n",
+    "                                           sess, logits, vgg_keep_prob, vgg_input))\n",
+    "            \n",
+    "#             image = load_single_image_from_path()\n",
+    "#             predictions = sess.run([tf.nn.softmax(logits)], {vgg_keep_prob: 1.0, vgg_input: image})\n",
+    "#             predictions = np.argmax(predictions, axis=2)\n",
+    "#             predictions = predictions.reshape(image_shape[0], image_shape[1], 1)\n",
+    "#             predictions = np.dot(predictions, np.array([[0, 255, 0, 127]]))\n",
+    "#             predictions = scipy.misc.toimage(predictions, mode=\"RGBA\")\n",
+    "#             scipy.misc.imshow(predictions)\n",
     "\n",
     "        # TODO: Save inference data using helper.save_inference_samples\n",
     "        #  helper.save_inference_samples(runs_dir, data_dir, sess, image_shape, logits, keep_prob, input_image)\n",
