--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
@@ -16,14 +14,25 @@
     "import project_tests as tests\n",
     "import scipy\n",
     "import numpy as np\n",
+    "from functools import partial\n",
+    "from moviepy.editor import VideoFileClip\n",
+    "from IPython.display import HTML\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.3.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Check TensorFlow Version\n",
     "assert LooseVersion(tf.__version__) >= LooseVersion('1.0'), 'Please use TensorFlow version 1.0 or newer.  You are using {}'.format(tf.__version__)\n",
@@ -32,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "# Check for a GPU\n",
     "if not tf.test.gpu_device_name():\n",
@@ -45,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def load_vgg(sess, vgg_path):\n",
     "    \"\"\"\n",
@@ -81,9 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def layers(vgg_layer3_out, vgg_layer4_out, vgg_layer7_out, num_classes):\n",
     "    \"\"\"\n",
@@ -124,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def optimize(nn_last_layer, correct_label, learning_rate, num_classes):\n",
     "    \"\"\"\n",
@@ -150,9 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from b'./data/vgg/variables/variables'\n",
+      "INFO:tensorflow:Restoring parameters from ./segmentation_model\n"
+     ]
+    }
+   ],
    "source": [
     "def train_nn(sess, epochs, batch_size, get_batches_fn, train_op, cross_entropy_loss, input_image,\n",
     "             correct_label, keep_prob, learning_rate):\n",
@@ -182,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -229,13 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 1260/1261 [03:14<00:00,  6.42it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "def run():\n",
     "    re_train = False\n",
-    "    predict_image = True\n",
+    "    predict_image = False\n",
+    "    process_video = True\n",
     "    \n",
     "    tf.reset_default_graph()\n",
     "    num_classes = 2\n",
@@ -293,6 +352,21 @@
     "            saver.restore(sess,tf.train.latest_checkpoint('./'))\n",
     "            scipy.misc.imshow(process_image(scipy.misc.imread(\"./data/data_road/testing/image_2/um_000001.png\"),\n",
     "                                           sess, logits, vgg_keep_prob, vgg_input, image_shape))\n",
+    "        \n",
+    "        if(process_video):\n",
+    "            saver = tf.train.Saver()\n",
+    "            saver.restore(sess,tf.train.latest_checkpoint('./'))\n",
+    "            Output_video = 'project_video_seg.mp4'\n",
+    "            Input_video = 'project_video.mp4'\n",
+    "            \n",
+    "            partial_process_image = partial(process_image,  sess=sess, logits=logits, keep_prob=vgg_keep_prob,\n",
+    "                                            input_image=vgg_input, image_shape=image_shape)\n",
+    "\n",
+    "            video_output = Output_video\n",
+    "            clip1 = VideoFileClip(Input_video)\n",
+    "            \n",
+    "            video_clip = clip1.fl_image(partial_process_image) #NOTE: this function expects color images!!\n",
+    "            video_clip.write_videofile(video_output, audio=False)\n",
     "            \n",
     "\n",
     "        # TODO: Save inference data using helper.save_inference_samples\n",
@@ -303,6 +377,36 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"project_video_seg.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML(\"\"\"\n",
+    "<video width=\"960\" height=\"540\" controls>\n",
+    "  <source src=\"project_video_seg.mp4\">\n",
+    "</video>\n",
+    "\"\"\")"
    ]
   },
   {
