--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os.path\n",
@@ -281,20 +283,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 1260/1261 [03:14<00:00,  6.42it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def run():\n",
     "    re_train = False\n",
-    "    predict_image = False\n",
-    "    process_video = True\n",
+    "    predict_image = True\n",
+    "    process_video = False\n",
     "    \n",
     "    tf.reset_default_graph()\n",
     "    num_classes = 2\n",
@@ -350,7 +344,7 @@
     "        \n",
     "            saver = tf.train.Saver()\n",
     "            saver.restore(sess,tf.train.latest_checkpoint('./'))\n",
-    "            scipy.misc.imshow(process_image(scipy.misc.imread(\"./data/data_road/testing/image_2/um_000001.png\"),\n",
+    "            scipy.misc.imshow(process_image(scipy.misc.imread(\"./data/data_road/training/image_2/uu_000040.png\"),\n",
     "                                           sess, logits, vgg_keep_prob, vgg_input, image_shape))\n",
     "        \n",
     "        if(process_video):\n",
@@ -383,30 +377,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"project_video_seg.mp4\">\n",
-       "</video>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "HTML(\"\"\"\n",
-    "<video width=\"960\" height=\"540\" controls>\n",
-    "  <source src=\"project_video_seg.mp4\">\n",
-    "</video>\n",
-    "\"\"\")"
+    "# HTML(\"\"\"\n",
+    "# <video width=\"960\" height=\"540\" controls>\n",
+    "#   <source src=\"project_video_seg.mp4\">\n",
+    "# </video>\n",
+    "# \"\"\")"
    ]
   },
   {
